footer with styling done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <header>My awsome header</header>
     <main>my main content</main>
+
+    <footer>my awsome footer</footer>
     
 </body>
 </html>
