contact form done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <header>My awsome header</header>
-    <main>my main content</main>
+    <main>
+        <form action="">
+            <input type="text" name="name" placeholder="name">
+            <input type="email" name="email" placeholder="email">
+            <textarea name="" id="" cols="30" rows="10" placeholder="message"></textarea>
+            <button>Send</button>
+
+        </form>
+    </main>
 
 
     <footer>my awsome footer</footer>
